# AuthLookup

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: default.yaml
config/prompts/: cpt_mapper.txt  input_parser.txt  policy_extractor.txt  staff_rewriter.txt
data/cms/current_article/: readme_first.txt
data/cpt/: cpt_codes.json
data/fhir_templates/: crd_template.json
data/policies/raw/: README.md
docs/: REFERENCE_MAP.md
scripts/: build_cms_cache_from_bulk.py  build_cpt_from_cms.py  clone_references.ps1  clone_references.sh  fetch_cms_coverage.py  fetch_cpt_data.py  fetch_policy_pdfs.py  parse_policy_pdfs.py  run_ollama_cpu.bat  run_ollama_cpu.sh  seed_vector_db.py  validate_cpt_mapping.py
src/: __init__.py  logging_config.py
src/api/: __init__.py  streamlit_app.py
src/config/: __init__.py  loader.py
src/fhir/: __init__.py  crd_generator.py  dtr_generator.py  fhir_utils.py
src/ingestion/: __init__.py  pdf_parser.py  policy_chunker.py
src/llm/: __init__.py  json_extractor.py  ollama_client.py  prompt_manager.py
src/lookup/: __init__.py  cms_policy_lookup.py  cpt_lookup.py  payer_aliases.py  policy_lookup.py  vector_store.py
tests/: __init__.py  conftest.py  test_cms_policy_lookup.py  test_config.py  test_cpt_lookup.py  test_fhir_generators.py  test_integration.py  test_llm.py  test_ollama_client.py  test_payer_aliases.py  test_pdf_parser.py  test_policy_lookup.py
tests/fixtures/: cpt_mapping.json
(+49 files in other folders)
